fixed styling for icon alignment

--- a/TxFApp/static/css/customstyles.css
+++ b/TxFApp/static/css/customstyles.css
@@ -50,3 +50,16 @@
   margin: 0;
   color: inherit;
 }
+
+.dot-border {
+	border-style: dotted;
+	border-color: rgb(128,128,128);
+	background-color: #d3D3D3;
+}
+
+.icon {
+	margin-right: 10px;
+	width: 5px;
+	height: 5px;
+	position: relative;
+}
